--- a/_posts/2016-08-22-markdown.md
+++ b/_posts/2016-08-22-markdown.md
@@ -4,7 +4,7 @@ title: How to markdown
 date: 2016-08-22 00:48:19
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - markdown
     - 学习手册
