--- a/_posts/2016-08-23-gitlearn.md
+++ b/_posts/2016-08-23-gitlearn.md
@@ -4,7 +4,7 @@ title: git学习手册1
 date: 2016-08-23 19:00:22
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - Git
     - 学习手册
