--- a/_posts/2016-08-28-leetcode-4.md
+++ b/_posts/2016-08-28-leetcode-4.md
@@ -4,7 +4,7 @@ title: Leetcode-4
 date: 2016-08-28 23:00:32
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
