--- a/_posts/2016-09-04-Leetcode-391-6.md
+++ b/_posts/2016-09-04-Leetcode-391-6.md
@@ -4,7 +4,7 @@ title: Leetcode-6-391
 date: 2016-09-04 00:12:01
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
