--- a/_posts/2016-09-07-Leetcode-392-394.md
+++ b/_posts/2016-09-07-Leetcode-392-394.md
@@ -4,7 +4,7 @@ title: Leetcode-392-394(共四道)
 date: 2016-09-07 01:17:21
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
