--- a/_posts/2016-09-20-Leetcode-9.md
+++ b/_posts/2016-09-20-Leetcode-9.md
@@ -4,7 +4,7 @@ title: Palindrome Number
 date: 2016-09-20 00:12:12
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
