--- a/_posts/2016-10-20-R-Summary.md
+++ b/_posts/2016-10-20-R-Summary.md
@@ -4,7 +4,7 @@ title: R Learnning
 date: 2016-10-20 22:48:19
 author: "Jerry"
 catalog:    true
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - 学习手册
     - R
