--- a/_posts/2016-10-31-ML-second.md
+++ b/_posts/2016-10-31-ML-second.md
@@ -4,7 +4,7 @@ title: Multivariate Linear Regression and the Octave
 date: 2016-10-31 09:12:05
 author: "Jerry"
 catalog:    true
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - Machine Learning
     - Ng
