--- a/_posts/2016-08-30-Leetcode-389-390.md
+++ b/_posts/2016-08-30-Leetcode-389-390.md
@@ -4,7 +4,7 @@ title: Leetcode-389-390
 date: 2016-08-30 09:10:01
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
