--- a/_posts/2016-09-11-Leetcode-5-7.md
+++ b/_posts/2016-09-11-Leetcode-5-7.md
@@ -4,7 +4,7 @@ title: Leetcode-5-7
 date: 2016-09-11 13:15:24
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - Algorithm
     - LeetCode
