--- a/_posts/2016-09-12-Leetcode-396-399.md
+++ b/_posts/2016-09-12-Leetcode-396-399.md
@@ -4,7 +4,7 @@ title: Leetcode-396-399
 date: 2016-09-12 22:53:21
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
