--- a/_posts/2016-09-24-Leetcode-11.md
+++ b/_posts/2016-09-24-Leetcode-11.md
@@ -4,7 +4,7 @@ title: Container With Most Water(Leetcode 11)
 date: 2016-09-24 13:15:24
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
