--- a/_posts/2016-10-25-Leetcode-406.md
+++ b/_posts/2016-10-25-Leetcode-406.md
@@ -4,7 +4,7 @@ title: Palindrome Number
 date: 2016-10-25 00:16:23
 catalog:    true
 author: "Jerry"
-header-img: "/img/blue.png"
+header-img: "img/blue.png"
 tags: 
     - LeetCode
 ---
