--- a/_posts/2016-12-24-kNN.md
+++ b/_posts/2016-12-24-kNN.md
@@ -15,13 +15,14 @@ tags:
 
 ## 概述
 
-    在模式认知中，**k邻近算法**是用于分类和回归的非参数算法（a non-parametric method ）。在这两种情况下，输入由特征空间中的k个最接近的训练样本组成。输出取决于k-NN是否用于分类或者回归：
+在模式认知中，**k邻近算法**是用于分类和回归的非参数算法（a non-parametric method ）。在这两种情况下，输入由特征空间中的k个最接近的训练样本组成。输出取决于k-NN是否用于分类或者回归：
   
 1. 在k-NN分类中，输出是类别的成员（比如约会网站例子中的，三种类型（或者说标签），1,2,3，输出结果确定为1,2,3中一种）。 对象通过其邻居的多数投票来分类，其中对象被分配给在其k个最近邻居中最常见的类（k是正整数，通常是小的）。 如果k = 1，则将对象简单地分配给该单个最近邻的类。
 2. 在k-NN回归中，输出是对象的属性值。 该值是其k个最近邻居的值的平均值。
 
    k-NN是一种基于实例的学习（又称记忆学习，通过将新问题实例与在训练中看到的实例进行比较，这些实例已经存储在存储器中）或惰性学习（直到给定一个测试元组才开始构造分类模型），其中函数仅在本地近似，并且所有计算被推迟到分类。k-NN算法是所有机器学习算法中最简单的算法之一。
-k-NN**没有显示的学习过程**
+k-NN**没有显示的学习过程**。
+
 ## k邻近算法模型
 
   kNN算法有三要素：距离度量、k值选择和分类决策规则决定。k邻近发中，当训练集、距离度，k值及分类规则（如多数表决）确定后，对于任何一个新的输入实例，它所属的类唯一确定。只是预测出的类可能不是我们所想要的即预测失败。
@@ -30,7 +31,7 @@ k-NN**没有显示的学习过程**
 
 ### 距离度量
 
-特征空间中两个实例点的距离是两个实例点的相似程度的反映，k邻近模型的特征空间一般是n维实数向量空间R<sup>n</sup>。使用的距离一般是欧式距离，但也可以是其他距离如L<sub>p</sup>距离或Minkowski距离。
+特征空间中两个实例点的距离是两个实例点的相似程度的反映，k邻近模型的特征空间一般是n维实数向量空间R<sup>n</sup>。使用的距离一般是欧式距离，但也可以是其他距离如L<sub>p</sub>距离或Minkowski距离。
 ![distance](http://ocdga6wo9.bkt.clouddn.com/distance.png)
 
 
@@ -88,4 +89,4 @@ k-NN中的决策规则往往是多数表决，即有输入实例的k个邻近训
 
 - 统计学习方法--李航
 - 机器学习实战
-- 沈超博客![](http://shenchao.me/2016/11/22/knn/)
+- [沈超博客](http://shenchao.me/2016/11/22/knn/)
