--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -14,6 +14,7 @@ tags:
 
 1. [461.Hamming Distance](https://leetcode.com/contest/leetcode-weekly-contest-13/problems/hamming-distance/) 求两个整数汉明距离，2个整数转换为2进制有多少位不相同。
 2. [477.Total Hamming Distance](https://leetcode.com/contest/leetcode-weekly-contest-13/problems/total-hamming-distance/) 给定一个整数数组，求数组内两两整数的汉明距离的总和。**关键整数最多在于32位**
+3. [476.Number Complement](https://leetcode.com/contest/leetcode-weekly-contest-14/problems/number-complement/)给定一个整数，将其二进制数每位取反，并返回该二进制数，如5，输出则是2.如1，输出0.**注意给定整数二进制不会以0开始**
 
 ## 深度优先（Depth-first-Search）
 
@@ -24,3 +25,8 @@ tags:
 
 1. [139.WordBreak](https://leetcode.com/problems/word-break/)判断字符串是否可以由字符串集合中元素组成。
 2. [472. Concatenated Words](https://leetcode.com/contest/leetcode-weekly-contest-13/problems/concatenated-words/)判断字符串数组中可以由其他字符组成的字符串集合，可以由139题结合起来做。
+
+
+## 递归、回溯（Backtracking）
+
+1. [78. Subsets](https://leetcode.com/problems/subsets/)给定一个集合（没有重复的数字），求其所有子集
