add leetcode,1.10 and 1.11

--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -19,7 +19,7 @@ tags:
 ## 深度优先（Depth-first-Search）
 
 1. [473. Matchsticks to Square](https://leetcode.com/problems/matchsticks-to-square/)给定一堆数，划分为四堆，每堆数总和相等。（[partition problem](https://en.wikipedia.org/wiki/Partition_problem)）
-2. [140. Word Break II](https://leetcode.com/problems/word-break-ii/)**难度非常难**
+2. [140. Word Break II](https://leetcode.com/problems/word-break-ii/) <font color=red>难度：Hard</font>
 
 ## 动态规划（Dynamic Programming)
 
@@ -30,3 +30,10 @@ tags:
 ## 递归、回溯（Backtracking）
 
 1. [78. Subsets](https://leetcode.com/problems/subsets/)给定一个集合（没有重复的数字），求其所有子集
+2. [90. Subsets II](https://leetcode.com/problems/subsets-ii/)给定一个集合（有重复的数字），求其所有不重复的子集，相对于上题添加一个条件有重复数字，所以产生的子集会重复，解决方法用HashSet处理List，或者，`if(i > start && nums[i] == nums[i-1]) continue; // skip duplicates`
+
+## 链表（Linked List）
+
+1. [24. Swap Nodes in Pairs](https://leetcode.com/problems/swap-nodes-in-pairs/)给定一个链表，交换相邻的结点，每个节点只交换一次。 <font color="#FF00FF">自己完成，提交好几次才成功，用几个指针，分别用来干啥要清楚。Discuss里有个递归算法很棒。</font> <font color=red>难度： Easy</font>
+
+
