--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -10,6 +10,8 @@ tags:
     - LeetCode
 ---
 
+> 不积跬步无以至千里，不积小流无以成江河。每天一道LeetCode
+
 ## 位操作(Bit Manipulation)
 
 1. [461.Hamming Distance](https://leetcode.com/contest/leetcode-weekly-contest-13/problems/hamming-distance/) 求两个整数汉明距离，2个整数转换为2进制有多少位不相同。
@@ -32,9 +34,9 @@ tags:
 1. [78. Subsets](https://leetcode.com/problems/subsets/)给定一个集合（没有重复的数字），求其所有子集
 2. [90. Subsets II](https://leetcode.com/problems/subsets-ii/)给定一个集合（有重复的数字），求其所有不重复的子集，相对于上题添加一个条件有重复数字，所以产生的子集会重复，解决方法用HashSet处理List，或者，`if(i > start && nums[i] == nums[i-1]) continue; // skip duplicates`
 3. [46. Permutations](https://leetcode.com/problems/permutations/)给定一个集合（没有重复的数字）,求全排列。正常解法和上面两题相似，用回溯。查看discuss后发现，用一个**简单迭代**。n个数的全排列就相当于n-1个数的全排列后，加上第n个数在每个位子上的排列。<font color="red">难度： Easy</font>
-如`[1,2,3]`
 
 ```
+如[1,2,3]
 首先添加1
 {[1]}
 再添加2时有两种可能即在1的前面和1的后面，
@@ -42,9 +44,23 @@ tags:
 再添加3时，则有六种情况，恰好为[1,2,3]的全排列3！个
 {[3,1,2],[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,2,1]}
 ```
+4. [47. Permutations II](https://leetcode.com/problems/permutations-ii/)这题相对于上一题，加上重复数字，难度感觉上升了许多。关键在于利用一个数组保存数组哪些是使用过的哪些是未使用的。不能直接用**contains()**函数来判断了。<font color="red">难度： Medium</font>
 
 ## 链表（Linked List）
 
 1. [24. Swap Nodes in Pairs](https://leetcode.com/problems/swap-nodes-in-pairs/)给定一个链表，交换相邻的结点，每个节点只交换一次。 <font color="#FF00FF">自己完成，提交好几次才成功，用几个指针，分别用来干啥要清楚。Discuss里有个递归算法很棒。</font> <font color="red">难度： Easy</font>
 
 
+## 数组（Array）
+
+1. [31. Next Permutation](https://leetcode.com/problems/next-permutation/)求给定数字序列的next permutation，next permutation意思是求比当前序列大的序列中最小的序列，如果当前序列是最大值，则求其逆序。
+关键求从右到左找到第一个逆序的值`i`（这里`i`为数组下标），然后从右向左找到第一个比`i`值大的数，并交换`i`和`j`，最后由于`i`和`j`交换后下标大于`i`的一定是逆序，所以将其逆转回来，这样就求解出来了
+
+```
+如[1,3,4,4,2,1]
+找到逆序3<4
+接着找到下标为3的值4
+交换[1,4,4,3,2,1]
+最后逆序[1,4,4,1,2,3]这样就得到next permutation
+
+```
