--- a/_posts/2017-01-04-2016总结.md
+++ b/_posts/2017-01-04-2016总结.md
@@ -19,7 +19,7 @@ tags:
 
 ## 2017每日坚持
 1. 每天坚持做一道leetcode上的题，做不来没关系，查资料要弄清楚当天的题目用的算法，归纳总结。
-2. 每天20个英语单词，之所以要背单词，是因为英语太重要了，而且自己词汇量太少了。
+2. <s>每天20个英语单词，之所以要背单词，是因为英语太重要了，而且自己词汇量太少了。</s>，一个半星期过去，单词不想背，还是改为听TED，听一遍写出一些句子，把不会的单词记下来。
 3. 坚持每周去健身房两次。
 
 ## 2017目标
