--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -45,6 +45,8 @@ tags:
 {[3,1,2],[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,2,1]}
 ```
 4. [47. Permutations II](https://leetcode.com/problems/permutations-ii/)这题相对于上一题，加上重复数字，难度感觉上升了许多。关键在于利用一个数组保存数组哪些是使用过的哪些是未使用的。不能直接用**contains()**函数来判断了。<font color="red">难度： Medium</font>
+5. [39. Combination Sum](https://leetcode.com/problems/combination-sum/)给定数组，和一个目标数字，求所有由数组中数的组成的集合（数组内数字可以重用）。也可以用**DP算法**。  <font color="red">难度：Medium</font>
+
 
 ## 链表（Linked List）
 
@@ -64,3 +66,5 @@ tags:
 最后逆序[1,4,4,1,2,3]这样就得到next permutation
 
 ```
+2. [485. Max Consecutive Ones](https://leetcode.com/problems/max-consecutive-ones/)给定一个二进制的数组（数组内数字只有0,1），求最大连续的1的数目是多少。 <font color="red">难度：Easy</font>
+
