--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -27,7 +27,7 @@ tags:
 
 1. [139.WordBreak](https://leetcode.com/problems/word-break/)判断字符串是否可以由字符串集合中元素组成。
 2. [472. Concatenated Words](https://leetcode.com/contest/leetcode-weekly-contest-13/problems/concatenated-words/)判断字符串数组中可以由其他字符组成的字符串集合，可以由139题结合起来做。
-
+3. <a href='#39'>LeetCode39题在递归里的第5道题，有必要看一看</a>
 
 ## 递归、回溯（Backtracking）
 
@@ -44,9 +44,10 @@ tags:
 再添加3时，则有六种情况，恰好为[1,2,3]的全排列3！个
 {[3,1,2],[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,2,1]}
 ```
-4. [47. Permutations II](https://leetcode.com/problems/permutations-ii/)这题相对于上一题，加上重复数字，难度感觉上升了许多。关键在于利用一个数组保存数组哪些是使用过的哪些是未使用的。不能直接用**contains()**函数来判断了。<font color="red">难度： Medium</font>
-5. [39. Combination Sum](https://leetcode.com/problems/combination-sum/)给定数组，和一个目标数字，求所有由数组中数的组成的集合（数组内数字可以重用）。也可以用**DP算法**。  <font color="red">难度：Medium</font>
 
+4. [47. Permutations II](https://leetcode.com/problems/permutations-ii/)这题相对于上一题，加上重复数字，难度感觉上升了许多。关键在于利用一个数组保存数组哪些是使用过的哪些是未使用的。不能直接用**contains()**函数来判断了。<font color="red">难度： Medium</font>
+5. [39. Combination Sum](https://leetcode.com/problems/combination-sum/)给定数组（没有重复的数字），和一个目标数字，求所有由数组中数的组成的集合（数组内数字可以重用）。也可以用**DP算法**。  <font color="red">难度：Medium</font> <a id='39'></a>
+6. [40. Combination Sum II](https://leetcode.com/problems/combination-sum-ii/)给定数组（可能有重复的数字），和目标数字，求所有组合，使得组合的和等于目标数字。**数组中的数字只能用一次**
 
 ## 链表（Linked List）
 
