--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -69,3 +69,16 @@ tags:
 ```
 2. [485. Max Consecutive Ones](https://leetcode.com/problems/max-consecutive-ones/)给定一个二进制的数组（数组内数字只有0,1），求最大连续的1的数目是多少。 <font color="red">难度：Easy</font>
 
+
+## 其他（Others）
+
+1. [495. Teemo Attacking](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/teemo-attacking/)题目那么长，做起来可简单了。给定一个数组A（按升序排序，没有重复的，都大于0）和一个大于0的整数n，`Teenmo`（LLP中的超级英雄）会在A数组中的每个时刻（数组中每个整数都是一个时刻）投放毒，投放毒的持续时间为n，最后求总的持续时间。<font color="red">难度：Easy</font>
+
+```
+Input: [1,4], 2
+Output: 4
+
+Input: [1,2], 2
+Output: 3
+```
+2. [501. Find Mode in Binary Tree](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/find-mode-in-binary-tree/)注意Mode这个单词的意思是`the value that occurs most frequently in a given set of data.`，在给定数据中出现的次数最多的。题目要求如果有多个Mode都输出出来。<font color="red">难度：Medium</font>
