--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -70,9 +70,17 @@ tags:
 2. [485. Max Consecutive Ones](https://leetcode.com/problems/max-consecutive-ones/)给定一个二进制的数组（数组内数字只有0,1），求最大连续的1的数目是多少。 <font color="red">难度：Easy</font>
 
 
+## 二分查找（Binary Search）
+
+1. [441. Arranging Coins](https://leetcode.com/problems/arranging-coins/)给定一个整数n，要求返回一个整数s，其中`(1+s)*s/2`**恰好**小于等于`n`，若等于`n`则返回`s`，小于则返回`s-1`.如果按照题目本身叙述来做不难，用`O(n)`的时间复杂度就能很简单完成。而我这样叙述过后应该可以用二分查找，其时间复杂度为`O(lg2_n)`.还有一种用**数学的方式求解**，直接用一个公式可以求解出来，就解一个一元二次方程。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+`(x * ( x + 1)) / 2 <= n`
+`x = 1 / 2 * (-sqrt(8.0 * n + 1)-1)` (负根舍去) or `x = 1 / 2 * (sqrt(8.0 * n + 1)-1)`
+
+
+
 ## 其他（Others）
 
-1. [495. Teemo Attacking](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/teemo-attacking/)题目那么长，做起来可简单了。给定一个数组A（按升序排序，没有重复的，都大于0）和一个大于0的整数n，`Teenmo`（LLP中的超级英雄）会在A数组中的每个时刻（数组中每个整数都是一个时刻）投放毒，投放毒的持续时间为n，最后求总的持续时间。<font color="red">难度：Easy</font>
+1. [495. Teemo Attacking](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/teemo-attacking/)题目那么长，做起来可简单了。给定一个数组A（按升序排序，没有重复的，都大于0）和一个大于0的整数n，`Teenmo`（LLP中的超级英雄）会在A数组中的每个时刻（数组中每个整数都是一个时刻）投放毒，投放毒的持续时间为n，最后求总的持续时间。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 
 ```
 Input: [1,4], 2
@@ -81,4 +89,6 @@ Output: 4
 Input: [1,2], 2
 Output: 3
 ```
-2. [501. Find Mode in Binary Tree](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/find-mode-in-binary-tree/)注意Mode这个单词的意思是`the value that occurs most frequently in a given set of data.`，在给定数据中出现的次数最多的。题目要求如果有多个Mode都输出出来。<font color="red">难度：Medium</font>
+2. [501. Find Mode in Binary Tree](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/find-mode-in-binary-tree/)注意Mode这个单词的意思是`the value that occurs most frequently in a given set of data.`，在给定数据中出现的次数最多的。题目要求如果有多个Mode都输出出来。**通过这道题学会map按key和value进行排序**<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+
+3. [284. Peeking Iterator](https://leetcode.com/problems/peeking-iterator/)重写`Iterator`类，添加一个`peek`方法，获取迭代器的下一个元素，但不将元素取出来。类似栈里面的`getTop`方法.解题关键在于**利用`next`方法，因为`next`方法中是将元素取出来，我们直接将元素取出来，然后保存在类的成员中,这时hasNext方法返回值应当是判断成员的值是否为空**.<font color="red">难度：Medium</font>
