--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -67,8 +67,22 @@ tags:
 最后逆序[1,4,4,1,2,3]这样就得到next permutation
 
 ```
+
 2. [485. Max Consecutive Ones](https://leetcode.com/problems/max-consecutive-ones/)给定一个二进制的数组（数组内数字只有0,1），求最大连续的1的数目是多少。 <font color="red">难度：Easy</font>
 
+3. [496. Next Greater Element I](https://leetcode.com/contest/leetcode-weekly-contest-18b/problems/next-greater-element-i/)给定两个数组`A`和`B`，`A`是`B`的子数组，且`A`,`B`中数字不重复，求`A`中每个数字的在`B`中对应的数字的下一个大的数字，若没有则为`-1`.这题用到`Map`，将数组`B`的每一个数字作为`Map`的`key`，`value`值就为比`key`大的下一个数字，若没有则`value`为`-1`，当时花了20分钟做出来，我做的时间复杂度为`O(n^2)`.看到discuss上的有答案为`O(n)`，发现确实比较巧妙，他的方法用的是一个Map和一个栈，也是将B来Map，巧妙在于他用一个栈来查找比当前大的下一个数字.**这方法太巧妙了**。 <font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+
+```
+Input: A=[4,1,2] , B=[1,3,4,2]
+Output: [-1,3,-1]
+```
+
+4. [506. Relative Ranks](https://leetcode.com/contest/leetcode-weekly-contest-18b/problems/relative-ranks/)题目不难，就是排序。不过学到一个，`java`中数组有个`clone`方法，用来复制数组。这回`discuss`上有个细节比我做的好，第一个就是数组复制问题，第二个就是map时可以直接解决问题，自己强行加了一个reverse方法。 <font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+
+
+5. [503. Next Greater Element II](https://leetcode.com/contest/leetcode-weekly-contest-18b/problems/next-greater-element-ii/)这题与第三题有点相似，不同的地方在于只有一个数组，但数组是“圆的”，查找下一个大的数时，可以绕一圈求.这题目做起来并不难，但查看`discuss`发现，也有一个用`Stack`的时间复杂度为`O(n)`，类似第三题的解法，但也有不同的地方，为了解决“圆的”问题，用了一个`2*n`的index来解决，但注意**只有`<n`时才进栈**.  <font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+
+6. [498. Diagonal traverse](https://leetcode.com/contest/leetcode-weekly-contest-18b/problems/diagonal-traverse/)数组里面找规律. <font color="red">难度：Easy</font>
 
 ## 二分查找（Binary Search）
 
