--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -103,6 +103,15 @@ Output: 4
 Input: [1,2], 2
 Output: 3
 ```
+
 2. [501. Find Mode in Binary Tree](https://leetcode.com/contest/leetcode-weekly-contest-17/problems/find-mode-in-binary-tree/)注意Mode这个单词的意思是`the value that occurs most frequently in a given set of data.`，在给定数据中出现的次数最多的。题目要求如果有多个Mode都输出出来。**通过这道题学会map按key和value进行排序**<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 
 3. [284. Peeking Iterator](https://leetcode.com/problems/peeking-iterator/)重写`Iterator`类，添加一个`peek`方法，获取迭代器的下一个元素，但不将元素取出来。类似栈里面的`getTop`方法.解题关键在于**利用`next`方法，因为`next`方法中是将元素取出来，我们直接将元素取出来，然后保存在类的成员中,这时hasNext方法返回值应当是判断成员的值是否为空**.<font color="red">难度：Medium</font>
+
+4. [365. Water and Jug Problem](https://leetcode.com/problems/water-and-jug-problem/)两只水桶量水问题，给定两个水桶体积分别为x,y，求能否量出z体积的水量（水无限，最后将z体积水，装到这两个桶中的一个或者多个）.这题是个纯数学问题，需要数论的知识去证明[Bézout's identity定理](https://en.wikipedia.org/wiki/B%C3%A9zout%27s_identity)（中文名，裴蜀定理）.wiki上的解释如下：
+
+> Bézout's identity (also called Bézout's lemma) is a theorem in elementary number theory: let a and b be nonzero integers and let d be their greatest common divisor. Then there exist integers x and y such that `ax + by = d`. In addition,
+- the greatest common divisor d is the smallest positive integer that can be written as ax + by
+- every integer of the form ax + by is a multiple of the greatest common divisor d.
+for example:  x = 4, y = 6, z = 8 => gcd(x,y) = 2, and 8 is multiple of 2, so this input is valid and we have:-1 * 4 + 6 * 2 = 8.
+参考discuss上的。<font color="red">难度：Medium</font>
