--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -49,6 +49,8 @@ tags:
 5. [39. Combination Sum](https://leetcode.com/problems/combination-sum/)给定数组（没有重复的数字），和一个目标数字，求所有由数组中数的组成的集合（数组内数字可以重用）。也可以用**DP算法**。  <font color="red">难度：Medium</font> <a id='39'></a>
 6. [40. Combination Sum II](https://leetcode.com/problems/combination-sum-ii/)给定数组（可能有重复的数字），和目标数字，求所有组合，使得组合的和等于目标数字。**数组中的数字只能用一次**
 
+7. [60. Permutation Sequence](https://leetcode.com/problems/permutation-sequence/)给定1~n，进行排列组合，按照排列后的整数的大小进行编号，求编号为k的序列.这道题思路想到了，可是没实现出来。<font color="red">难度： Medium</font>
+
 ## 链表（Linked List）
 
 1. [24. Swap Nodes in Pairs](https://leetcode.com/problems/swap-nodes-in-pairs/)给定一个链表，交换相邻的结点，每个节点只交换一次。 <font color="#FF00FF">自己完成，提交好几次才成功，用几个指针，分别用来干啥要清楚。Discuss里有个递归算法很棒。</font> <font color="red">难度： Easy</font>
