--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -92,6 +92,7 @@ Output: [-1,3,-1]
 `(x * ( x + 1)) / 2 <= n`
 `x = 1 / 2 * (-sqrt(8.0 * n + 1)-1)` (负根舍去) or `x = 1 / 2 * (sqrt(8.0 * n + 1)-1)`
 
+2. [29. Divide Two Integers](https://leetcode.com/problems/divide-two-integers/)两个整数相除，不能用除号、乘号和取余符号。**注意返回值也是整数**。注意整数越界问题。<font color="red">难度：Medium</font>
 
 
 ## 其他（Others）
