--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -56,7 +56,7 @@ tags:
 1. [24. Swap Nodes in Pairs](https://leetcode.com/problems/swap-nodes-in-pairs/)给定一个链表，交换相邻的结点，每个节点只交换一次。 <font color="#FF00FF">自己完成，提交好几次才成功，用几个指针，分别用来干啥要清楚。Discuss里有个递归算法很棒。</font> <font color="red">难度： Easy</font>
 
 
-## 数组（Array）
+## 数组 or 字符串（Array or String）
 
 1. [31. Next Permutation](https://leetcode.com/problems/next-permutation/)求给定数字序列的next permutation，next permutation意思是求比当前序列大的序列中最小的序列，如果当前序列是最大值，则求其逆序。
 关键求从右到左找到第一个逆序的值`i`（这里`i`为数组下标），然后从右向左找到第一个比`i`值大的数，并交换`i`和`j`，最后由于`i`和`j`交换后下标大于`i`的一定是逆序，所以将其逆转回来，这样就求解出来了
@@ -86,6 +86,7 @@ Output: [-1,3,-1]
 
 6. [498. Diagonal traverse](https://leetcode.com/contest/leetcode-weekly-contest-18b/problems/diagonal-traverse/)数组里面找规律. <font color="red">难度：Easy</font>
 
+7. [504. Base 7](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/base-7/)给定一个整数返回七进制的字符串。`-7`则返回`-10`，`100`则返回`202`。**注意`StringBuilder`有个`reverse()`方法**用来逆转字符串。 <font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 ## 二分查找（Binary Search）
 
 1. [441. Arranging Coins](https://leetcode.com/problems/arranging-coins/)给定一个整数n，要求返回一个整数s，其中`(1+s)*s/2`**恰好**小于等于`n`，若等于`n`则返回`s`，小于则返回`s-1`.如果按照题目本身叙述来做不难，用`O(n)`的时间复杂度就能很简单完成。而我这样叙述过后应该可以用二分查找，其时间复杂度为`O(lg2_n)`.还有一种用**数学的方式求解**，直接用一个公式可以求解出来，就解一个一元二次方程。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
@@ -93,6 +94,12 @@ Output: [-1,3,-1]
 `x = 1 / 2 * (-sqrt(8.0 * n + 1)-1)` (负根舍去) or `x = 1 / 2 * (sqrt(8.0 * n + 1)-1)`
 
 2. [29. Divide Two Integers](https://leetcode.com/problems/divide-two-integers/)两个整数相除，不能用除号、乘号和取余符号。**注意返回值也是整数**。注意整数越界问题。<font color="red">难度：Medium</font>
+
+## 二叉树（Binary Tree）
+
+1. [513. Find Bottom Left Tree Value](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-bottom-left-tree-value/),给定非空二叉树，查找树中最底端最左的元素，返回该元素。**层次遍历，广度优先遍历（Standard travel by level, Java BFS）** 题目不难，但通过这次题目让我了解了java 中Queue队列使用，以及复习了层次遍历。Discuss中有个**递归算法**也还不错，其实最开始想的就是递归算法，但是没做出来。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+2. [515. Find Largest Value in Each Tree Row](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-largest-value-in-each-tree-row/)，求出二叉树每层的最大值，以list形式返回。解法同上。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+3. [493. Reverse Pairs](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/reverse-pairs/)使用二叉排序树解决题目问题，是一个思路，这思路值得学，可是会TLE（超时），其实用归并排序比较好，在归并过程中比较。**归并算法可以用来求解，大小比较个数问题，相对于原位置来说。**<font color="red">难度：Hard</font> 
 
 
 ## 其他（Others）
