--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -100,7 +100,7 @@ Output: [-1,3,-1]
 1. [513. Find Bottom Left Tree Value](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-bottom-left-tree-value/),给定非空二叉树，查找树中最底端最左的元素，返回该元素。**层次遍历，广度优先遍历（Standard travel by level, Java BFS）** 题目不难，但通过这次题目让我了解了java 中Queue队列使用，以及复习了层次遍历。Discuss中有个**递归算法**也还不错，其实最开始想的就是递归算法，但是没做出来。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 2. [515. Find Largest Value in Each Tree Row](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-largest-value-in-each-tree-row/)，求出二叉树每层的最大值，以list形式返回。解法同上。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 3. [493. Reverse Pairs](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/reverse-pairs/)使用二叉排序树解决题目问题，是一个思路，这思路值得学，可是会TLE（超时），其实用归并排序比较好，在归并过程中比较。**归并算法可以用来求解，大小比较个数问题，相对于原位置来说。**<font color="red">难度：Hard</font> 
-
+4. [307. Range Sum Query - Mutable](https://leetcode.com/problems/range-sum-query-mutable/)**可变的范围求和查询**，给定一个数组，要求完成一个`update()`和`sumRange()`函数。这题用的是[线段树(segment tree)](https://en.wikipedia.org/wiki/Segment_tree)，[这里](http://www.geeksforgeeks.org/segment-tree-set-1-sum-of-given-range/)有详细的JAVA实现segment tree的说明与代码。第一次用，感觉不错，类似二叉树，但又有不同的地方。<font color="red">难度：Medium</font>
 
 ## 其他（Others）
 
