--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -51,6 +51,8 @@ tags:
 
 7. [60. Permutation Sequence](https://leetcode.com/problems/permutation-sequence/)给定1~n，进行排列组合，按照排列后的整数的大小进行编号，求编号为k的序列.这道题思路想到了，可是没实现出来。<font color="red">难度： Medium</font>
 
+8. [526. Beautiful Arrangement](https://leetcode.com/contest/leetcode-weekly-contest-20/problems/beautiful-arrangement/)`divisible`意思可被整除。类似于第一题的回溯，关键在于将`n`理解分配到数组里去。<font color="red">难度： Medium</font>
+
 ## 链表（Linked List）
 
 1. [24. Swap Nodes in Pairs](https://leetcode.com/problems/swap-nodes-in-pairs/)给定一个链表，交换相邻的结点，每个节点只交换一次。 <font color="#FF00FF">自己完成，提交好几次才成功，用几个指针，分别用来干啥要清楚。Discuss里有个递归算法很棒。</font> <font color="red">难度： Easy</font>
@@ -87,6 +89,25 @@ Output: [-1,3,-1]
 6. [498. Diagonal traverse](https://leetcode.com/contest/leetcode-weekly-contest-18b/problems/diagonal-traverse/)数组里面找规律. <font color="red">难度：Easy</font>
 
 7. [504. Base 7](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/base-7/)给定一个整数返回七进制的字符串。`-7`则返回`-10`，`100`则返回`202`。**注意`StringBuilder`有个`reverse()`方法**用来逆转字符串。 <font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+
+8. [520. Detect Capital](https://leetcode.com/contest/leetcode-weekly-contest-20/problems/detect-capital/)，字符串匹配问题，第一时间想到的应该是用**正则表达式**，java中类`java.util.regex`中可以查看相应的正则表达式规则。**我太蠢了，居然用字符串处理函数substring(),toUpperCase(),toLowerCase(),equals()来检测字符串，不过最后还是做出来了**。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
+
+```java
+/*
+//solution one
+        if(word.toUpperCase().equals(word)||word.toLowerCase().equals(word)){
+            return true;
+        }else if(word.substring(1,word.length()).toLowerCase().equals(word.substring(1,word.length()))&&
+        word.substring(0,1).toUpperCase().equals(word.substring(0,1))){
+            return true;
+        }else{
+            return false;
+        }*/
+
+//solution two
+return word.matches("[A-Z]+|[a-z]+|^[A-Z][a-z]+");
+```
+
 ## 二分查找（Binary Search）
 
 1. [441. Arranging Coins](https://leetcode.com/problems/arranging-coins/)给定一个整数n，要求返回一个整数s，其中`(1+s)*s/2`**恰好**小于等于`n`，若等于`n`则返回`s`，小于则返回`s-1`.如果按照题目本身叙述来做不难，用`O(n)`的时间复杂度就能很简单完成。而我这样叙述过后应该可以用二分查找，其时间复杂度为`O(lg2_n)`.还有一种用**数学的方式求解**，直接用一个公式可以求解出来，就解一个一元二次方程。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
@@ -100,7 +121,7 @@ Output: [-1,3,-1]
 1. [513. Find Bottom Left Tree Value](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-bottom-left-tree-value/),给定非空二叉树，查找树中最底端最左的元素，返回该元素。**层次遍历，广度优先遍历（Standard travel by level, Java BFS）** 题目不难，但通过这次题目让我了解了java 中Queue队列使用，以及复习了层次遍历。Discuss中有个**递归算法**也还不错，其实最开始想的就是递归算法，但是没做出来。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 2. [515. Find Largest Value in Each Tree Row](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-largest-value-in-each-tree-row/)，求出二叉树每层的最大值，以list形式返回。解法同上。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 3. [493. Reverse Pairs](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/reverse-pairs/)使用二叉排序树解决题目问题，是一个思路，这思路值得学，可是会TLE（超时），其实用归并排序比较好，在归并过程中比较。**归并算法可以用来求解，大小比较个数问题，相对于原位置来说。**<font color="red">难度：Hard</font> 
-4. [307. Range Sum Query - Mutable](https://leetcode.com/problems/range-sum-query-mutable/)**可变的范围求和查询**，给定一个数组，要求完成一个`update()`和`sumRange()`函数。这题用的是[线段树(segment tree)](https://en.wikipedia.org/wiki/Segment_tree)，[这里](http://www.geeksforgeeks.org/segment-tree-set-1-sum-of-given-range/)有详细的JAVA实现segment tree的说明与代码。第一次用，感觉不错，类似二叉树，但又有不同的地方。<font color="red">难度：Medium</font>
+4. [307. Range Sum Query - Mutable](https://leetcode.com/problems/range-sum-query-mutable/)**可变的范围求和查询**，给定一个数组，要求完成一个`update()`和`sumRange()`函数。这题用的是[线段树(segment tree)](https://en.wikipedia.org/wiki/Segment_tree)，[这里](http://www.geeksforgeeks.org/segment-tree-set-1-sum-of-given-range/)有详细的JAVA实现segment tree的说明与代码。第一次用，感觉不错，类似二叉树，但又有不同的地方。注意还有另外一种使用数状数组(Binary Indexed tree, fenwick tree)的解法。<font color="red">难度：Medium</font>
 
 ## 其他（Others）
 
