--- a/_posts/2017-01-04-Leetcode题目分类.md
+++ b/_posts/2017-01-04-Leetcode题目分类.md
@@ -22,7 +22,15 @@ tags:
 
 1. [473. Matchsticks to Square](https://leetcode.com/problems/matchsticks-to-square/)给定一堆数，划分为四堆，每堆数总和相等。（[partition problem](https://en.wikipedia.org/wiki/Partition_problem)）
 2. [140. Word Break II](https://leetcode.com/problems/word-break-ii/) <font color="red">难度：Hard</font>
+3. [529. Minesweeper](https://leetcode.com/contest/leetcode-weekly-contest-21/problems/minesweeper/)discuss上的解法总是让人兴奋不已（The code in discuss is always mind blowing....）<font color="red">难度： Medium</font>
 
+```
+This is a typical Search problem, either by using DFS or BFS. Search rules:
+If click on a mine ('M'), mark it as 'X', stop further search.
+If click on an empty cell ('E'), depends on how many surrounding mine:
+2.1 Has surrounding mine(s), mark it with number of surrounding mine(s), stop further search.
+2.2 No surrounding mine, mark it as 'B', continue search its 8 neighbors.
+```
 ## 动态规划（Dynamic Programming)
 
 1. [139.WordBreak](https://leetcode.com/problems/word-break/)判断字符串是否可以由字符串集合中元素组成。
@@ -107,7 +115,8 @@ Output: [-1,3,-1]
 //solution two
 return word.matches("[A-Z]+|[a-z]+|^[A-Z][a-z]+");
 ```
-
+9. [523. Continuous Subarray Sum](https://leetcode.com/contest/leetcode-weekly-contest-21/problems/continuous-subarray-sum/)判断是否数组里存在连续整数的和为给定值k的倍数。我是用个数组，但是时间复杂度是O(n^2).有个O(n)的时间复杂度和空间复杂度也为O(n)的算法。<font color="red">难度：Medium</font>  <font color="blue">自己完成</font>
+10. [524. Longest Word in Dictionary through Deleting](https://leetcode.com/contest/leetcode-weekly-contest-21/problems/longest-word-in-dictionary-through-deleting/)给定字符串和要匹配字符串，判断删除某些字符后存在匹配字符串中的最大字符串。**不要遍历字符串，遍历匹配字符串**。<font color="red">难度：Medium</font>
 ## 二分查找（Binary Search）
 
 1. [441. Arranging Coins](https://leetcode.com/problems/arranging-coins/)给定一个整数n，要求返回一个整数s，其中`(1+s)*s/2`**恰好**小于等于`n`，若等于`n`则返回`s`，小于则返回`s-1`.如果按照题目本身叙述来做不难，用`O(n)`的时间复杂度就能很简单完成。而我这样叙述过后应该可以用二分查找，其时间复杂度为`O(lg2_n)`.还有一种用**数学的方式求解**，直接用一个公式可以求解出来，就解一个一元二次方程。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
@@ -122,6 +131,7 @@ return word.matches("[A-Z]+|[a-z]+|^[A-Z][a-z]+");
 2. [515. Find Largest Value in Each Tree Row](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/find-largest-value-in-each-tree-row/)，求出二叉树每层的最大值，以list形式返回。解法同上。<font color="red">难度：Easy</font>  <font color="blue">自己完成</font>
 3. [493. Reverse Pairs](https://leetcode.com/contest/leetcode-weekly-contest-19/problems/reverse-pairs/)使用二叉排序树解决题目问题，是一个思路，这思路值得学，可是会TLE（超时），其实用归并排序比较好，在归并过程中比较。**归并算法可以用来求解，大小比较个数问题，相对于原位置来说。**<font color="red">难度：Hard</font> 
 4. [307. Range Sum Query - Mutable](https://leetcode.com/problems/range-sum-query-mutable/)**可变的范围求和查询**，给定一个数组，要求完成一个`update()`和`sumRange()`函数。这题用的是[线段树(segment tree)](https://en.wikipedia.org/wiki/Segment_tree)，[这里](http://www.geeksforgeeks.org/segment-tree-set-1-sum-of-given-range/)有详细的JAVA实现segment tree的说明与代码。第一次用，感觉不错，类似二叉树，但又有不同的地方。注意还有另外一种使用数状数组(Binary Indexed tree, fenwick tree)的解法。<font color="red">难度：Medium</font>
+5. [530. Minimum Absolute Difference in BST](https://leetcode.com/contest/leetcode-weekly-contest-21/problems/minimum-absolute-difference-in-bst/)bst树中序遍历，求绝对值最小的值。<font color="red">难度：Easy</font>
 
 ## 其他（Others）
 
