--- a/_posts/2017-02-24-DP四大问题之二.md
+++ b/_posts/2017-02-24-DP四大问题之二.md
@@ -11,7 +11,7 @@ tags:
     - Algorithm
 ---
 
-- 找两个字符串的最长公共子串，这个子串要求在原字符串中是连续的。而最长公共子序列则并不要求连续。子串是特殊的子序。
+> 找两个字符串的最长公共子串，这个子串要求在原字符串中是连续的。而最长公共子序列则并不要求连续。子串是特殊的子序。
 
 ## 最长公共子序（Longest common subsequence）
 
