add List learning

--- a/_posts/2017-03-24-信号量PV操作.md
+++ b/_posts/2017-03-24-信号量PV操作.md
@@ -5,7 +5,7 @@ subtitle: Semantics and implementation
 date: 2017-03-24 11:13:05
 author: "Jerry"
 catalog:    true
-use_math: true
+use_math: false
 header-img: "img/home-bg-o.jpg"
 tags:
     - 面试准备
