--- a/_posts/2017-03-27-java线程总结.md
+++ b/_posts/2017-03-27-java线程总结.md
@@ -5,7 +5,7 @@ subtitle: Java Thread
 date: 2017-03-27 11:13:05
 author: "Jerry"
 catalog:    true
-use_math: true
+use_math: false
 header-img: "img/post-bg-digital-native.jpg"
 tags:
     - 面试准备
